fix: ! align advantages in the center

--- a/src/components/website/advantages/advantages.css
+++ b/src/components/website/advantages/advantages.css
@@ -3,6 +3,10 @@
     height: auto;
     width: 100%;
     background-color: #141414;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /* The container is split into blocks */
